<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">嗨音乐</string>
    <string name="nav_select_find" tools:ignore="ExtraTranslation">发现</string>
    <string name="nav_select_podcast" tools:ignore="ExtraTranslation">播客</string>
    <string name="nav_select_mine" tools:ignore="ExtraTranslation">我的</string>
    <string name="nav_select_follow" tools:ignore="ExtraTranslation">关注</string>
    <string name="nav_select_yuncun" tools:ignore="ExtraTranslation">云村</string>
    <string name="login">登录</string>
    <string name="input_phone">手机号</string>
    <string name="input_pwd">密码</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="register">注册</string>

    <string name="http_loading">加载中&#8230;</string>

    <string name="http_unknown_error">请求出错，未知错误</string>
    <string name="http_token_error">登录失效，请重新登录</string>
    <string name="http_data_explain_error">数据解析异常，请稍后</string>
    <string name="http_server_out_time">服务器请求超时，请稍后再试</string>
    <string name="http_network_error">请求失败，请检查网络设置</string>
    <string name="http_response_error">服务器响应异常，请稍后再试，响应码：%d，响应信息：%s</string>
    <string name="http_server_error">服务器连接异常，请稍后再试</string>
    <string name="http_request_cancel">请求被中断，请重试</string>
    <string name="http_response_null_body">服务器数据返回异常，请稍后再试</string>
    <string name="http_response_md5_error">下载失败，文件 md5 校验失败</string>


</resources>